--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1ECZQV1656"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-1ECZQV1656');
-    </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <title>Giochi Matematici</title>
-    <meta name="description" content="Giochi di matematica per bambini della scuola primaria. Addizioni, divisioni, moltiplicazioni, successioni numeriche, probabilità e calcolo della media. Impara divertendoti!">
-    <meta name="keywords" content="giochi matematica, matematica bambini, scuola primaria, giochi educativi, addizioni, divisioni, moltiplicazioni, successioni numeriche, probabilità, calcolo media">
-    <meta name="author" content="Scuola Primaria">
+    <title>Rete di associazione per lo sviluppo sostenibile</title>
+    <meta name="description" content="Rete di Associazioni per lo sviluppo sostenible">
+    <meta name="keywords" content="Legambiente, Tracce del Marchesato, La Chiave verde">
+    <meta name="author" content="Ambiente">
 
     <!-- OPEN GRAPH -->
-    <meta property="og:title" content="Giochi per la Scuola Primaria">
+    <meta property="og:title" content="Legambiente "Le castella">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://giochimatematici.vercel.app">
+    <meta property="og:url" content="................................">
 
     <style>
         /* RESET & VARIABILI */
@@ -311,31 +303,20 @@
     <div class="container">
         <!-- HEADER -->
         <header class="header">
-            <h1 class="title">GIOCHI PER LA SCUOLA PRIMARIA</h1>
-            <p class="subtitle">🎮Scegli un gioco e batti tutti i record!🎮</p>
+            <h1 class="title">Rete Associazioni Sviluppo Sostenibile</h1>
+            <p class="subtitle">🎮.......................!🎮</p>
         </header>
         <!-- GAMES SECTION -->
         <section class="games-section">
             
             <!-- Griglia principale con 15 card → 3 righe da 5 (su desktop) -->
             <div class="games-grid">
-                <a href="addizione%20in%20colonna.html" class="game-card"><span class="game-icon">➕</span><div class="game-name">Addizione in Colonna</div></a>
-                <a href="divisioni%20con%20virgola.html" class="game-card"><span class="game-icon">➗</span><div class="game-name">Divisioni con Virgola</div></a>
-                <a href="divisioni per telefonino.html" class="game-card"><span class="game-icon">🎯</span><div class="game-name">Divisioni per telefonino</div></a>
-                <a href="moltiplicazioni.html" class="game-card"><span class="game-icon">✖️</span><div class="game-name">Moltiplicazioni</div></a>
-                <a href="ordinamenti.html" class="game-card"><span class="game-icon">📊</span><div class="game-name">Ordinamenti</div></a>
-                <a href="succesioni 4.html" class="game-card"><span class="game-icon">🔁</span><div class="game-name">Successioni 1</div></a>
-                <a href="Frazioni.html" class="game-card"><span class="game-icon">½</span><div class="game-name">FRAZIONI</div></a>
-                <a href="Media.html" class="game-card"><span class="game-icon">🧮</span><div class="game-name">Calcolo Media</div></a>
-                <a href="successioni numeriche 5.html" class="game-card"><span class="game-icon">🔢</span><div class="game-name">Successioni 2</div></a>
-                <a href="probabilità.html" class="game-card"><span class="game-icon">🎲</span><div class="game-name">PROBABILITA'</div></a>
-                <a href="problem solving.html" class="game-card"><span class="game-icon">🤔</span><div class="game-name">Tabelle e Grafici'</div></a>
-                <a href="problemi.html" class="game-card"><span class="game-icon">💡</span><div class="game-name">Problemi</div></a>
-                <a href="operazioni in colonna.html" class="game-card"> <span class="game-icon">🧩</span><div class="game-name">Operazioni in colonna</div></a>
-                <!-- GEOMETRIA ora nella griglia -->
-                <a href="area%20e%20perimetro.html" class="game-card">
-                    <span class="game-icon">📐</span>
-                    <div class="game-name">GEOMETRIA</div>
+                <a href="legambiente Le Castella.html" class="game-card"><span class="game-icon">➕</span><div class="game-name">Legambiente Le Castella</div></a>
+                <a href="tracce del marchesato.html" class="game-card"><span class="game-icon">➗</span><div class="game-name">Tracce del marchesato</div></a>
+                <a href="la chiave verde.html" class="game-card"><span class="game-icon">🎯</span><div class="game-name">La chiave verde</div></a>
+                <a href="cammino sostenibile.html" class="game-card"><span class="game-icon">✖️</span><div class="game-name">Cammino sostenibile</div></a>
+                <a href="gtckroton.html" class="game-card"><span class="game-icon">📊</span><div class="game-name">GTC KROTON</div></a>
+                <a href="cammino magna grecia.html" class="game-card"><span class="game-icon">🔁</span><div class="game-name">SCammino della Magna</div></a>
                 </a>
                 <a href="Gemetria 2.html" class="game-card"> <span class="game-icon">🧊</span><div class="game-name">Geometria 2</div></a>
             </div>
@@ -372,4 +353,5 @@
         });
     </script>
 </body>
+
 </html>
