--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <!-- Griglia principale con 15 card → 3 righe da 5 (su desktop) -->
             <div class="games-grid">
                 <a href="legambiente Le Castella.html" class="game-card"><span class="game-icon">➕</span><div class="game-name">Legambiente Le Castella</div></a>
-                <a href="tracce del marchesato.html" class="game-card"><span class="game-icon">➗</span><div class="game-name">Tracce del marchesato</div></a>
+                <a href="tracce del marchesato.html" class="game-card"><div class="game-name">Tracce del marchesato</div></a>
                 <a href="la chiave verde.html" class="game-card"><span class="game-icon">🎯</span><div class="game-name">La chiave verde</div></a>
                 <a href="cammino sostenibile.html" class="game-card"><span class="game-icon">✖️</span><div class="game-name">Cammino sostenibile</div></a>
                 <a href="gtckroton.html" class="game-card"><span class="game-icon">📊</span><div class="game-name">GTC KROTON</div></a>
@@ -355,3 +355,4 @@
 </body>
 
 </html>
+
